--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>head</h1>
+    <!-- <h1>head</h1>
     <h1>heading</h1>
     <h1>heading</h1>
 
-    <h3>new code change</h3>
+    <h3>new code change</h3> -->
 </body>
 </html>
