--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>I can push github</h1>
+    <h1>I can push github git git</h1>
     <h1>head</h1>
     <h1>heading</h1>
     <h1>heading</h1>
